--- a/Port.html
+++ b/Port.html
@@ -253,7 +253,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Lakshit. All rights reserved.</p>
       </div>
     </footer>
 
