--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="about-text animate__animated">
             <p>
               Hi, I'm <strong>Lakshit</strong>, a passionate software
-              developer with over 5 years of experience in building scalable web
+              developer with experience in AI in building scalable web
               applications, mobile apps, and solving complex problems with code.
               I specialize in modern technologies like JavaScript, React,
               Node.js, and Python. I love turning ideas into reality and
